Issue #3: Serve at HTTP via Express

--- a/.env.example
+++ b/.env.example
@@ -16,3 +16,5 @@ API_KEY="KEY_HERE" # Must not leak out publicly. Could result in quota overages 
 NUM_EVENTS_TO_FETCH=5
 # Logging verbosity (one of: error, warn, info, verbose, debug)
 LOG_VERBOSITY=verbose
+# HTTP Port to listen for incoming connections
+HTTP_PORT=3000
