--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
   "dependencies": {
-    "@google-cloud/local-auth": "^2.1.0",
-    "dotenv": "^16.3.1",
-    "googleapis": "^105.0.0",
-    "winston": "^3.11.0"
+    "@google-cloud/local-auth": "2.1.0",
+    "dotenv": "16.3.1",
+    "express": "4.18.2",
+    "googleapis": "105.0.0",
+    "winston": "3.11.0"
   }
 }
