Issue #6: Add cache refresh, configurable

--- a/.env.example
+++ b/.env.example
@@ -18,3 +18,5 @@ NUM_EVENTS_TO_FETCH=5
 LOG_VERBOSITY=verbose
 # HTTP Port to listen for incoming connections
 HTTP_PORT=3000
+# Number of seconds between refreshing the cache
+SECONDS_BETWEEN_CACHE_REFRESH=60
