Issue #8: Convert logging to Pino

--- a/.env.example
+++ b/.env.example
@@ -14,8 +14,8 @@ CALENDAR_ID="SOMETHING_HERE@group.calendar.google.com" # TBD Open Source Calenda
 API_KEY="KEY_HERE" # Must not leak out publicly. Could result in quota overages and DoS attacks.
 # How many events we'll fetch
 NUM_EVENTS_TO_FETCH=5
-# Logging verbosity (one of: error, warn, info, verbose, debug)
-LOG_VERBOSITY=verbose
+# Logging verbosity (one of: trace, debug, info, warn, error, fatal)
+LOG_VERBOSITY=debug
 # HTTP Port to listen for incoming connections
 HTTP_PORT=3000
 # Number of seconds between refreshing the cache
