--- a/package.json
+++ b/package.json
@@ -4,6 +4,6 @@
     "dotenv": "16.3.1",
     "express": "4.18.2",
     "googleapis": "105.0.0",
-    "winston": "3.11.0"
+    "pino": "8.16.0"
   }
 }
